--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube AI 챗봇</title>
+    <title>검색 AI 챗봇</title>
     <style>
         * {
             margin: 0;
@@ -211,13 +211,13 @@
 <body>
     <div class="chat-container">
         <div class="chat-header">
-            🎥 YouTube AI Assistant
+            🎥 검색 AI Assistant
         </div>
         
         <div class="chat-messages" id="chat-messages">
             <div class="message bot">
                 <div class="message-content">
-                    안녕하세요! YouTube 영상에 대해 궁금한 점을 물어보세요. 😊
+                    안녕하세요! 유튜브, 최신 이슈 등 궁금한 점을 물어보세요. 😊
                 </div>
             </div>
         </div>
@@ -362,14 +362,14 @@
         userInput.focus();
 
         // CORS 오류 감지를 위한 초기 테스트
-        fetch(CHAT_WEBHOOK_URL, {
-            method: 'OPTIONS',
-            headers: {
-                'ngrok-skip-browser-warning': 'true',
-            }
-        }).catch(() => {
-            showInfo('💡 팁: CORS 오류가 발생하면 n8n 내장 "Test chat" 버튼을 사용해보세요!');
-        });
+        // fetch(CHAT_WEBHOOK_URL, {
+        //     method: 'OPTIONS',
+        //     headers: {
+        //         'ngrok-skip-browser-warning': 'true',
+        //     }
+        // }).catch(() => {
+        //     showInfo('💡 팁: CORS 오류가 발생하면 n8n 내장 "Test chat" 버튼을 사용해보세요!');
+        // });
     </script>
 </body>
 </html>
